Fixed margins and alignment + modified some dimensions

--- a/css/sidebarStyle.css
+++ b/css/sidebarStyle.css
@@ -1,28 +1,35 @@
 .sidebarLeft {
     width: 20%;
-    height: 840px;
+    height: 92%;
     border: solid 1px red;
     text-align: center;
-    margin: .5%;
-    margin-top: 2%;
+    margin: 1% .5% .5%;
     left: 0;
     top: 5%;
     position: fixed;
-    background-image: url("../images/35802.jpg");
     font-family: 'Courier New', Courier, monospace;
 }
 
 .sidebarRight {
     width: 20%;
-    height: 840px; 
+    height: 92%;
     border: solid 1px red;
     text-align: center;
-    margin: .5%;
-    margin-top: 2%;
+    margin: 1% .5% .5%;
     position: fixed;
     right: 0;
     top: 5%;
-    background-image: url("../images/raindrops-on-glass-window-qv-1920x1080.jpg");
     font-family: 'Courier New', Courier, monospace;
 }
 
+.sidebarLeft img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.sidebarRight img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
